lintian (2.5.35) UNRELEASED; urgency=medium

  XXX: generate tag summary

  * checks/binaries.pm:
    + [NT] Apply patch from Sebastian Andrzej Siewior to inhibit
      binary-file-built-without-LFS-support tags for binaries
      that contains the "offending" LFS symbol.  These tend to
      come from gnulib and be LFS compliant.  Thanks to Guillem
      Jover for the report.  (Closes: #787853)
  * checks/fields.desc:
    + [JW] Fix spelling of the word "indicate".
  * checks/scripts.desc:
    + [BR] Document why adduser --no-create-home
      is a bad idea for system user.  (Closes: #793613).

  * data/cruft/warn-file-type:
    + [BR] Detect pascal resource file source.  (Closes: #793908).
  * data/scripts/maintainer-script-bad-command:
    + [BR] Detect more case of
       maintainer-script-should-not-use-adduser-system-without-home.
    + [BR] Print offending line for
      maintainer-script-should-not-use-adduser-system-without-home.
  * data/spelling/corrections*:
    + [JW] Fix correction for "acknowldegement".
    + [JW] Document that the lists should be sorted.
    + [JW] Re-sort the correction lists and remove duplicates.
    + [JW] Add more corrections.

  * mail-templates/license-problem-*:
    + [JW] Make the files end with newline character.
    + [JW] Fix typo in template.

  * private/refresh-manual-refs:
    + [JW] Update the list of required packages.

  * t/scripts/*.t:
    + [JW] Make all the scripts executable.

 -- Niels Thykier <niels@thykier.net>  Wed, 22 Jul 2015 22:48:07 +0200

lintian (2.5.34) unstable; urgency=medium

  * Summary of tag changes:
    + Added:
      - unstripped-static-library

  * checks/binaries.{desc,pm}:
    + [NT] Apply patch from Guillem Jover to improve the tag
      description of the LFS tag.  (Closes: #792167)
    + [NT] Detect unstripped static libraries (as an
      experimental tag).
  * checks/cruft.pm:
    + [NT] Avoid svn-conflict-file tag for ".r0" files, since